k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rna-seq-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: rna-seq-web-ip
  labels:
    app: rna-seq-web
spec:
  backend:
    serviceName: rna-seq-web-backend
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rna-seq-web-backend
  labels:
    app: rna-seq-web
spec:
  type: NodePort
  selector:
    app: rna-seq-web
    tier: backend
  ports:
  - port: 80
    targetPort: 8000
